# PuTTY

./: .gitignore  AUDIT.md  CMakeLists.txt  MACOS_GUI_PLAN.md  Makefile  README  WIN_BUILD_ENV.md  cgtest.c  config.c  logging.c  pscp.c  putty.h  settings.c  sshpubk.c
.cursor/rules/: agents.mdc  bridge-and-ui.mdc  general.mdc  pure-c.mdc
.github/codeql/: codeql-config.yml
.github/workflows/: codeql.yml
__cmake_systeminformation/: CMakeCache.txt  results.txt
build-test-ninja-warn/: CMakeCache.txt
cmake/: cmake.h.in  macos_early.cmake  setup.cmake
crypto/: argon2.c  mlkem.c
doc/: CMakeLists.txt  faq.but
macos/: .clang-format  .clang-tidy  .swiftformat  .swiftlint.yml  ACCESSIBILITY.md  AGENT.md  CMakeLists.txt  HELP.md  INTEGRATION.md  PARITY.md  PRINTING.md  README.md  TESTING.md  build.sh  mac-gui-seat.h  platform.h  platform_sources.cmake  plink.c  psocks.c
macos/PuTTY/: CMakeLists.txt  Info.plist  Info.plist.in  OsxKeys.swift  PuTTYApp.swift  PuttyConfHandle.swift  PuttyEventLoop.swift  SessionEventLog.swift  SessionSavedSessionsMenu.swift  SessionSpecialsMenu.swift  SessionWindowController.swift  TERMINAL_PERFORMANCE.md  TerminalPaletteCache.swift  TerminalScrollContainer.swift  TerminalTextRenderer.swift  TerminalView.swift
macos/PuttyMacUI/: CMakeLists.txt  EventLogWindowController.swift  HelpWindowController.swift  OsxKeys.swift  PuttyAccessibility.swift  PuttyBridgeError.swift  PuttyChrome.swift  PuttyConfHandle.swift  PuttyEventLoop.swift  PuttyHelp.swift  PuttyLocalNetwork.swift  PuttyMainHop.swift  PuttyStandardMenus.swift  SessionEventLog.swift  SessionSpecialsMenu.swift  SessionWindowController.swift  TerminalClipboard.swift  TerminalFontCache.swift  TerminalPaletteCache.swift  TerminalPrint.swift  TerminalScrollContainer.swift  TerminalScrollInput.swift  TerminalTextRenderer.swift  TerminalView.swift  TerminalWindowChrome.swift
macos/Resources/Assets.xcassets/AccentColor.colorset/: Contents.json
macos/Resources/Assets.xcassets/ChromeBackground.colorset/: Contents.json
macos/Resources/Assets.xcassets/ToolbarTemplate.imageset/: Contents.json
macos/Resources/en.lproj/: InfoPlist.strings
macos/bridge/: CMakeLists.txt  PuttyBridgePhase3ExitTest.swift  PuttyBridgeSmoke.swift  PuttyBridgeTermPerfTest.swift  module.modulemap  putty-bridge-app.c  putty-bridge-cmdline.c  putty-bridge-conf-smoke-main.c  putty-bridge-internal.h  putty-bridge-launch.c  putty-bridge-network-smoke.c  putty-bridge-phase3-exit-main.c  putty-bridge-phase3-exit.c  putty-bridge-phase5-exit-main.c  putty-bridge-phase5-exit.c  putty-bridge-platform.c  putty-bridge-smoke-main.c  putty-bridge-ssh-exit.c  putty-bridge-termwin-bell-title-smoke-main.c  putty-bridge-termwin-clipboard-smoke-main.c  putty-bridge-termwin-input-smoke-main.c  putty-bridge-termwin-perf-main.c  putty-bridge-termwin-phase4-exit-main.c  putty-bridge-termwin-phase52-exit-main.c  putty-bridge-termwin-phase53-exit-main.c  putty-bridge-termwin-phase54-exit-main.c  putty-bridge-termwin-phase55-exit-main.c  putty-bridge-termwin-phase56-exit-main.c  putty-bridge-termwin-scroll-resize-smoke-main.c  putty-bridge-termwin.c  putty-bridge-termwin.h  putty-bridge-thread.c  putty-bridge-thread.h  putty-bridge.c  putty-bridge.h  putty-conf.c  putty-eventloop.c  putty-session.c
macos/cmake/: bundle_version.cmake  help.cmake  icons.cmake  pam_to_png.py  quality.cmake  utils_sources.cmake  verify_bundle_layout.cmake  verify_universal.cmake
macos/platform/: agent-client.c  agent-socket.c  askpass-appkit.m  askpass-smoke-main.c  cliloop.c  config-appkit.h  config-appkit.m  config-macos.c  config-smoke-main.c  console.c  eventloop-appkit.h  eventloop-appkit.m  fd-socket.c  gss.c  gui-seat-list.c  keygen-noise.c  local-proxy.c  network.c  no-gtk.c  noaskpass.c  noise.c  osxkeys.c  osxkeys.h  osxlaunch.c  pageant.c  paths.c  paths.h  peerinfo.c  printing-smoke-main.c  printing.c  procnet.c  psusan.c  pty.c  seat-dialogs-smoke-main.c  seat-dialogs.h  seat-dialogs.m  seat-output-smoke-main.c  seat-smoke-main.c  seat-smoke-platform.c  seat.c  (+14 more)
macos/platform/stubs/: no-uxsel.c
macos/pterm/: CMakeLists.txt  Info.plist.in  PtermApp.swift  pterm-app.c  pterm-bridge-cmdline.c  pterm-smoke.c
macos/puttygen/: CMakeLists.txt  Info.plist.in  PuttygenApp.swift  PuttygenWindowController.swift  module.modulemap  puttygen-app.c  puttygen-bridge.c  puttygen-bridge.h  puttygen-smoke-main.c
macos/scripts/: run-clang-analyze.sh  run-clang-tidy.sh  run-swift-coverage-report.sh  run-swiftformat.sh  run-swiftlint.sh
macos/tests/: CMakeLists.txt  run_fuzzterm_smoke.cmake
macos/tests/PuttyMacUITests/: AccessibilityTests.swift  BridgeErrorTests.swift  ConfigSaveLoadTests.swift  HelpTests.swift  IntegrationTests.swift  LaunchTests.swift  MockConnectTests.swift  PrintingTests.swift  TestSupport.swift
macos/utils/: arm_arch_queries.c  arm_arch_queries.h  block_signal.c  cloexec.c  cmdline_arg.c  dputs.c  filename.c  fontspec.c  get_username.c  getticks.c  keysym_to_unicode.c  make_dir_and_check_ours.c  make_dir_path.c  make_spr_sw_abort_errno.c  nonblock.c  open_for_write_would_lose_data.c  pgp_fingerprints.c  pollwrap.c  signal.c  subprocess_waiter.c  x11_ignore_error.c
ssh/: connection2.c  x11fwd.c
terminal/: terminal.c
test/: agenttestgen.py  coverage_escapes.txt  test_terminal.c
unix/: agent-client.c  cliloop.c  network.c  pageant.c  pty.c  serial.c  sharing.c  x11.c
unix/utils/: arm_arch_queries.h
utils/: backend_socket_log.c
